--- a/static/wasm-wordle/index.html
+++ b/static/wasm-wordle/index.html
@@ -7,6 +7,7 @@
             html,
             body,
             canvas {
+                background-color: black;
                 margin: 0px;
                 padding: 0px;
                 overflow: hidden;
@@ -20,7 +21,7 @@
             <!-- <canvas id="canvas" style="width: 300px; height: 300px;" width="300" height="300"></canvas> -->
 
             <!-- Fullscreen mode: unset `height` OR\AND `width` attribute -->
-            <canvas id="canvas" width="460" height="510"></canvas>
+            <canvas id="canvas" width="500" height="540"></canvas>
         </div>
 
         <script type="module" src="./index.js" type="application/javascript"></script>
