--- a/static/stltodaystats/about.html
+++ b/static/stltodaystats/about.html
@@ -11,7 +11,7 @@
 </p>
 <p>Some other details about querying the statistics:</p>
 <ul>
-    <li><p>Queries have a limit of 250 rows returned.</p></li>
+    <li><p>Queries have a limit of 250 rows returned unless an explicit limit is included in the query.</p></li>
     <li><p>TODO</p></li>
 </ul>
 <h2>Limitations</h2>
@@ -30,7 +30,6 @@
             many times the number of attempts was omitted or somehow a player has more shots made than attempts.
             I'm thinking sometimes it is entered as "made-attempts" and others as "made-missed".
             I ended up removing those queries which is unfortunate since that would be an interesting stat.
-
         </p>
     </li>
 </ul>
@@ -69,7 +68,6 @@
     <p>Known gaps without known resolution:</p>
     <table class="gaps">
         <tr><th colspan="3">Baseball</th></tr>
-        <tr><td>DuBourg</td><td>2018-19</td><td>MaxPreps has no stats</td></tr>
         <tr><td>DuBourg</td><td>2018-19</td><td>MaxPreps has no stats</td></tr>
         <tr><td>Herculaneum</td><td>2013-14</td><td>MaxPreps has no stats</td></tr>
         <tr><td>Hillsboro</td><td>2015-16</td><td>MaxPreps has no stats</td></tr>
@@ -116,10 +114,13 @@
     </table>
     <li><p>I know of one missing game in Hockey.<sub>3</sub> There is likely a lot of missing games across sports just like missing seasons.</p></li>
 </ul>
+<h3>Database last modification times:</h3>
+<p>The databases are being updated as seasons progress, data is cleaned up, names corrected or new data discovered.</p>
+<iframe src="dblastmods.html" onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"></iframe>
 <hr/>
 <h2>Technical Information</h2>
 <p>For those who know <a href="https://en.wikipedia.org/wiki/SQL">SQL</a>.</p>
-<!--pUser that have knowledge of SQL can enter or edit existing queries. Here are descriptions of the databases used by the sports and the tables and columns defined:</p>
+<!--p Users that have knowledge of SQL can enter or edit existing queries. Here are descriptions of the databases used by the sports and the tables and columns defined:</p>
 <p>
     All tables across sports have the following columns:
 </p>
