need to work on gitb

--- a/static/coderover.html
+++ b/static/coderover.html
@@ -16,7 +16,7 @@
     <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
     <script src="https://code.createjs.com/1.0.0/tweenjs.min.js"></script>
     <!-- Include Scala.js compiled code -->
-    <script type="text/javascript" src="./target/scala-2.11/coderover-fastopt/main.js"></script>
+    <script type="text/javascript" src="./scala-2.11/coderover-fastopt/main.js"></script>
     <script type="text/javascript" src="./coderover.js"> </script>
 
   </head>
