--- a/static/stltodaystats/about.html
+++ b/static/stltodaystats/about.html
@@ -43,7 +43,7 @@
 <h2>Missing Data:</h2>
 <ul>  
   <li>
-    <p>I first noticed that STLtoday has no stats for Alton Marquette girls soccer in 2016-2017.<sub>1</sub>There are many missing seasons for various schools and sports. Sometimes, it is likely that the school was small and perhaps didn't field a team that year or it was the pandemic. There are definitely some are conspicuous like private Catholic schools missing soccer seasons. For some sports, MaxPreps may have some stats that can "massaged" and fed into the database.<sub>2</sub>I'll be going through the "gaps" (missing seasons interspersed with seasons with stats) first determining that the season was played and try to find an alterative source of stats.
+    <p>I first noticed that STLtoday has no stats for Alton Marquette girls soccer in 2016-17.<sub>1</sub>There are many missing seasons for various schools and sports. Sometimes, it is likely that the school was small and perhaps didn't field a team that year or it was the pandemic. There are definitely some are conspicuous like private Catholic schools missing soccer seasons. For some sports, MaxPreps may have some stats that can "massaged" and fed into the database.<sub>2</sub>I'll be going through the "gaps" (missing seasons interspersed with seasons with stats) first determining that the season was played and try to find an alterative source of stats.
     <p>Known gaps that can be or have been addressed:</p>
     <table class="gaps">
         <tr><th colspan="3">Baseball</th></tr>
@@ -55,13 +55,13 @@
 
 
         <tr><th colspan="3">Girls Volleyball</th></tr>
-        <tr><td>Belleville East</td><td>2021-2022</td><td>TODO - https://www.maxpreps.com/il/belleville/belleville-east-lancers/volleyball/21-22/stats/</td></tr>
-        <tr><td>Mehlville</td><td>2016-2017</td><td>TODO - https://www.maxpreps.com/mo/st-louis/mehlville-panthers/volleyball/16-17/stats/</td></tr>
-        <tr><td>MICDS</td><td>2017-2018</td><td>TODO - https://www.maxpreps.com/mo/st-louis/micds-rams/volleyball/17-18/stats/</td></tr>
-        <tr><td>Pacific</td><td>2022-2023</td><td>DONE - Populated from MaxPreps (Only 19 sets there)</td></tr>
-        <tr><td>Parkway Central</td><td>2020-2021</td><td>DONE - Populated from MaxPreps</td></tr>
-        <tr><td>Windsor (Imperial)</td><td>2019-2020</td><td>TODO - Populated from MaxPreps</td></tr>
-        <tr><td>Windsor (Imperial)</td><td>2020-2021</td><td>TODO - Populated from MaxPreps</td></tr>
+        <tr><td>Belleville East</td><td>2021-22</td><td>TODO - https://www.maxpreps.com/il/belleville/belleville-east-lancers/volleyball/21-22/stats/</td></tr>
+        <tr><td>Mehlville</td><td>2016-17</td><td>TODO - https://www.maxpreps.com/mo/st-louis/mehlville-panthers/volleyball/16-17/stats/</td></tr>
+        <tr><td>MICDS</td><td>2017-18</td><td>TODO - https://www.maxpreps.com/mo/st-louis/micds-rams/volleyball/17-18/stats/</td></tr>
+        <tr><td>Pacific</td><td>2022-23</td><td>DONE - Populated from MaxPreps (Only 19 sets there)</td></tr>
+        <tr><td>Parkway Central</td><td>2020-21</td><td>DONE - Populated from MaxPreps</td></tr>
+        <tr><td>Windsor (Imperial)</td><td>2019-20</td><td>TODO - Populated from MaxPreps</td></tr>
+        <tr><td>Windsor (Imperial)</td><td>2020-21</td><td>TODO - Populated from MaxPreps</td></tr>
      
     </table>
 
@@ -89,28 +89,29 @@
         <tr><td>Summit</td><td>2009-10</td><td>MaxPrep no - MidStates doesn't go back that far</td></tr>
 
         <tr><th colspan="3">Girls Soccer</th></tr>
-        <tr><td>Alton Marquette</td><td>2016-2017</td><td>MaxPreps has no stats</td></tr>
-        <tr><td>Borgia</td><td>2017-2018</td><td>MaxPreps has no stats</td></tr>
-        <tr><td>Ursuline</td><td>2017-2018</td><td>MaxPreps has no stats</td></tr>
+        <tr><td>Alton Marquette</td><td>2016-17</td><td>MaxPreps has no stats</td></tr>
+        <tr><td>Borgia</td><td>2017-18</td><td>MaxPreps has no stats</td></tr>
+        <tr><td>Ursuline</td><td>2017-18</td><td>MaxPreps has no stats</td></tr>
 
         <tr><th colspan="3">Girls Volleyball</th></tr>
-        <tr><td>DuBourg</td><td>2006-2007</td><td>MaxPreps does not go back that far</td></tr>
-        <tr><td>DuBourg</td><td>2007-2008</td><td>MaxPreps has no stats</td></tr>
-        <tr><td>DuBourg</td><td>2020-2021</td><td>MaxPreps stats empty</td></tr>
-        <tr><td>Fort Zumwalt North</td><td>2017-2018</td><td>MaxPreps has no stats</td></tr>
-        <tr><td>Fox</td><td>2013-2014</td><td>MaxPreps has no stats</td></tr>
-        <tr><td>Highland</td><td>2021-2022</td><td>MaxPreps has no stats</td></tr>
-        <tr><td>Mehlville</td><td>2021-2022</td><td>MaxPreps has no stats</td></tr>
-        <tr><td>MICDS</td><td>2018-2019</td><td>MaxPreps has no stats</td></tr>
-        <tr><td>Notre Dame</td><td>2012-2013</td><td>MaxPreps has no stats</td></tr>
-        <tr><td>Notre Dame</td><td>2013-2014</td><td>MaxPreps has no stats</td></tr>
-        <tr><td>Orchard Farm</td><td>2012-2013</td><td>MaxPreps has no stats</td></tr>
-        <tr><td>Pacific</td><td>2007-2008</td><td>MaxPreps stats empty</td></tr>
-        <tr><td>Parkway Central</td><td>2003-2004</td><td>MaxPreps does not go back that far</td></tr>
-        <tr><td>St. Joseph's</td><td>2000-2001</td><td>MaxPreps does not go back that far</td></tr>
-        <tr><td>Visitation</td><td>2007-2008</td><td>MaxPreps stats empty</td></tr>
-        <tr><td>Visitation</td><td>2008-2009</td><td>MaxPreps stats empty</td></tr>
-        <tr><td>Webster Groves</td><td>2020-2021</td><td>MaxPreps has no stats</td></tr>
+        <tr><td>DuBourg</td><td>2006-07</td><td>MaxPreps does not go back that far</td></tr>
+        <tr><td>DuBourg</td><td>2007-08</td><td>MaxPreps has no stats</td></tr>
+        <tr><td>DuBourg</td><td>2020-21</td><td>MaxPreps stats empty</td></tr>
+        <tr><td>Fort Zumwalt North</td><td>2017-18</td><td>MaxPreps has no stats</td></tr>
+        <tr><td>Fox</td><td>2013-14</td><td>MaxPreps has no stats</td></tr>
+        <tr><td>Highland</td><td>2021-22</td><td>MaxPreps has no stats</td></tr>
+        <tr><td>Mehlville</td><td>2021-22</td><td>MaxPreps has no stats</td></tr>
+        <tr><td>MICDS</td><td>2018-19</td><td>MaxPreps has no stats</td></tr>
+        <tr><td>Notre Dame</td><td>2012-13</td><td>MaxPreps has no stats</td></tr>
+        <tr><td>Notre Dame</td><td>2013-14</td><td>MaxPreps has no stats</td></tr>
+        <tr><td>Orchard Farm</td><td>2012-13</td><td>MaxPreps has no stats</td></tr>
+        <tr><td>Pacific</td><td>2007-08</td><td>MaxPreps stats empty</td></tr>
+        <tr><td>Parkway Central</td><td>2003-04</td><td>MaxPreps does not go back that far</td></tr>
+        <tr><td>Roxana</td><td>2021-22, 2022-23</td><td>STLtoday doesn't have all set stats. MaxPreps has no stats</td></tr>
+        <tr><td>St. Joseph's</td><td>2000-01</td><td>MaxPreps does not go back that far</td></tr>
+        <tr><td>Visitation</td><td>2007-08</td><td>MaxPreps stats empty</td></tr>
+        <tr><td>Visitation</td><td>2008-09</td><td>MaxPreps stats empty</td></tr>
+        <tr><td>Webster Groves</td><td>2020-21</td><td>MaxPreps has no stats</td></tr>
     </table>
     <li><p>I know of one missing game in Hockey.<sub>3</sub> There is likely a lot of missing games across sports just like missing seasons.</p></li>
 </ul>
