updated soccerg and baseball plus separated database info

--- a/static/stltodaystats/index.html
+++ b/static/stltodaystats/index.html
@@ -14,7 +14,11 @@
 <link rel="stylesheet" href="prism.css">
 
 <body onload="init('./queries.js')">
-  <h1>STLtoday High School Sports StatsDB<a href="about.html">About</a></h1>
+<div style="display:flex">
+  <h1>STLtoday High School Sports StatsDB</h1>
+  <a href="dblastmods.html">Database&nbsp;Info</a>&nbsp;
+  <a href="about.html">About</a>
+</div>
 
   <p>Sport:
     <select id="selectSport">
