--- a/static/stltodaystats/dblastmods.html
+++ b/static/stltodaystats/dblastmods.html
@@ -1,5 +1,7 @@
-<html><body><table class="lastmods">
-<tr><td>baseball.db</td><td>2023-04-07 00:58:34
+<html><head><link rel='stylesheet' type='text/css' href='styles.css'></head><body><p>The databases are being updated as seasons progress, data is cleaned up, names corrected or new data discovered.</p>
+<h3>Database last modification times:</h3>
+<table class="lastmods">
+<tr><td>baseball.db</td><td>2023-06-05 19:04:47
 </td></tr>
 <tr><td>basketballb.db</td><td>2023-06-01 01:03:00
 </td></tr>
@@ -17,7 +19,7 @@
 </td></tr>
 <tr><td>soccerb.db</td><td>2023-03-14 23:36:05
 </td></tr>
-<tr><td>soccerg.db</td><td>2023-05-19 20:28:06
+<tr><td>soccerg.db</td><td>2023-06-05 18:59:53
 </td></tr>
 <tr><td>softball.db</td><td>2023-06-01 01:03:20
 </td></tr>
