Correct basketballb name and 2023-24 soccerb stats

--- a/static/stltodaystats/dblastmods.html
+++ b/static/stltodaystats/dblastmods.html
@@ -1,9 +1,12 @@
-<html><head><link rel='stylesheet' type='text/css' href='styles.css'></head><body><p>The databases are being updated as seasons progress, data is cleaned up, names corrected or new data discovered.</p>
+<html><head><link rel='stylesheet' type='text/css' href='styles.css'></head>
+<body>
+<p>The databases are being updated as seasons progress, data is cleaned up, names corrected or new data discovered.</p>
+<p>The databases for sports played by boys and girls with will be suffixed with 'b' or 'g' respectively.</p>
 <h3>Database last modification times:</h3>
-<table class="lastmods">
+<table class=\"lastmods\">
 <tr><td>baseball.db</td><td>2023-06-25 13:43:38
 </td></tr>
-<tr><td>basketballb.db</td><td>2023-06-01 01:03:00
+<tr><td>basketballb.db</td><td>2023-11-10 02:22:28
 </td></tr>
 <tr><td>basketballg.db</td><td>2023-06-01 01:05:39
 </td></tr>
@@ -17,7 +20,7 @@
 </td></tr>
 <tr><td>lacrosseg.db</td><td>2023-06-01 01:04:24
 </td></tr>
-<tr><td>soccerb.db</td><td>2023-11-09 03:35:10
+<tr><td>soccerb.db</td><td>2023-11-27 01:54:56
 </td></tr>
 <tr><td>soccerg.db</td><td>2023-06-05 18:59:53
 </td></tr>
