--- a/static/stltodaystats/about.html
+++ b/static/stltodaystats/about.html
@@ -48,21 +48,17 @@
     <table class="gaps">
         <tr><th colspan="3">Baseball</th></tr>
         <tr><td>Alton Marquette</td><td>2014-15</td><td>TODO - https://www.maxpreps.com/il/alton/marquette-catholic-explorers/baseball/13-14/stats/</td></tr>
-
-
         <tr><th colspan="3">Girls Basketball</th></tr>
         <tr><td>Vashon</td><td>2016-17</td><td>TODO - https://www.maxpreps.com/mo/st-louis/vashon-wolverines/basketball/girls/16-17/stats/</td></tr>
-
-
         <tr><th colspan="3">Girls Volleyball</th></tr>
         <tr><td>Belleville East</td><td>2021-22</td><td>TODO - https://www.maxpreps.com/il/belleville/belleville-east-lancers/volleyball/21-22/stats/</td></tr>
         <tr><td>Mehlville</td><td>2016-17</td><td>TODO - https://www.maxpreps.com/mo/st-louis/mehlville-panthers/volleyball/16-17/stats/</td></tr>
         <tr><td>MICDS</td><td>2017-18</td><td>TODO - https://www.maxpreps.com/mo/st-louis/micds-rams/volleyball/17-18/stats/</td></tr>
         <tr><td>Pacific</td><td>2022-23</td><td>DONE - Populated from MaxPreps (Only 19 sets there)</td></tr>
         <tr><td>Parkway Central</td><td>2020-21</td><td>DONE - Populated from MaxPreps</td></tr>
-        <tr><td>Windsor (Imperial)</td><td>2019-20</td><td>TODO - Populated from MaxPreps</td></tr>
-        <tr><td>Windsor (Imperial)</td><td>2020-21</td><td>TODO - Populated from MaxPreps</td></tr>
-     
+        <tr><td>Windsor (Imperial)</td><td>2019-20</td><td>DONE - Populated from MaxPreps</td></tr>
+        <tr><td>Windsor (Imperial)</td><td>2020-21</td><td>DONE - Populated from MaxPreps</td></tr>
+        <tr><td>Visitation</td><td>2023-24</td><td>DONE - Populated from MaxPreps</td></tr>
     </table>
 
     <p>Known gaps without known resolution:</p>
