--- a/static/market_head2head.html
+++ b/static/market_head2head.html
@@ -36,7 +36,7 @@ JAX : ["Jacksonville"],
 KC : ["Kansas City"],
 LA : ["Los Angeles"],
 LOU : ["Louisville"],
-LV : ["Vegas"],
+LV : ["Las Vegas"],
 MEM : ["Memphis"],
 MIN : ["Minneapolis-St.Paul"],
 MIA : ["Miami"],
@@ -55,12 +55,12 @@ PHI : ["Philadelphia"],
 PHX : ["Phoenix"],
 PIT : ["Pittsburgh"],
 POR : ["Portland"],
-RAL : ["Raliegh"],
+RAL : ["Raleigh"],
 SAC : ["Sacramento"],
 SLC : ["Salt Lake City"],
 SA : ["San Antonio"],
 SD : ["San Diego"],
-SF : ["San Franscisco"],
+SF : ["San Francisco"],
 SJ : ["San Jose"],
 SEA : ["Seattle"],
 STL : ["St. Louis"],
